fixed the responsiveness on mobile view

--- a/dash.css
+++ b/dash.css
@@ -25,7 +25,7 @@ body {
 .main-container {
   width: clapm(350px, 80%, 400px);
   min-width: 250px;
-  min-height: 620px;
+  min-height: clamp(650px, 80%, 700px);
   display: flex;
   justify-content: start;
   align-items: center;
